// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders large box shadow with default border 1`] = `
<div
  className="hrEEgb"
/>
`;

exports[`Card renders medium box shadow with default border 1`] = `
<div
  className="iVJhgP"
/>
`;

exports[`Card renders medium box shadow with specified borderRadius 1`] = `
<div
  className="hYHkps"
/>
`;

exports[`Card renders medium box shadow with specified borderWidth 1`] = `
<div
  className="kGLACV"
/>
`;

exports[`Card renders small box shadow with default border 1`] = `
<div
  className="fOOmPq"
/>
`;

exports[`Card renders xlarge box shadow with default border 1`] = `
<div
  className="dNuYra"
/>
`;
